# polars_encryption

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish_to_pypi.yml
polars_encryption/: __init__.py
src/: expressions.rs  lib.rs  utils.rs
tests/: test_encryption_decryption.py
